--- a/react/backend/.env
+++ b/react/backend/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb+srv://anantharamanmac:anantha7162@fileshare.lg5ic0y.mongodb.net/?retryWrites=true&w=majority&appName=fileshare
-PORT=5000
+process.env.FRONTEND_URL=http://localhost:3000/
