--- a/react/backend/.env
+++ b/react/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://anantharamanmac:anantha7162@fileshare.lg5ic0y.mongodb.net/?retryWrites=true&w=majority&appName=fileshare
 process.env.FRONTEND_URL=http://localhost:3000/
+JWT_SECRET=hgcghdgjhcvkguj
